syntax = "proto3";

package degrees.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/richardbowden/degrees/internal/pb/degrees/v1;degreesv1";

// ========================================
// Messages
// ========================================

message ServiceCategory {
  int64 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  int32 sort_order = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message DetailingService {
  int64 id = 1;
  int64 category_id = 2;
  string name = 3;
  string slug = 4;
  string description = 5;
  string short_desc = 6;
  int64 base_price = 7;
  int32 duration_minutes = 8;
  bool is_active = 9;
  int32 sort_order = 10;
  string category_name = 11;
  repeated DetailingServiceOption options = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message DetailingServiceOption {
  int64 id = 1;
  int64 service_id = 2;
  string name = 3;
  string description = 4;
  int64 price = 5;
  bool is_active = 6;
  int32 sort_order = 7;
  google.protobuf.Timestamp created_at = 8;
}

// ========================================
// Request/Response Messages
// ========================================

message ListCategoriesRequest {}

message ListCategoriesResponse {
  repeated ServiceCategory categories = 1;
}

message ListCatalogueServicesRequest {}

message ListCatalogueServicesResponse {
  repeated DetailingService services = 1;
}

message GetCatalogueServiceRequest {
  string slug = 1;
}

message GetCatalogueServiceResponse {
  DetailingService service = 1;
}

message CreateServiceRequest {
  int64 category_id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  string short_desc = 5;
  int64 base_price = 6;
  int32 duration_minutes = 7;
  bool is_active = 8;
  int32 sort_order = 9;
}

message CreateServiceResponse {
  DetailingService service = 1;
}

message UpdateServiceRequest {
  int64 id = 1;
  int64 category_id = 2;
  string name = 3;
  string slug = 4;
  string description = 5;
  string short_desc = 6;
  int64 base_price = 7;
  int32 duration_minutes = 8;
  bool is_active = 9;
  int32 sort_order = 10;
}

message UpdateServiceResponse {
  DetailingService service = 1;
}

message DeleteServiceRequest {
  int64 id = 1;
}

message DeleteServiceResponse {
  bool success = 1;
}

message AddServiceOptionRequest {
  int64 service_id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  bool is_active = 5;
  int32 sort_order = 6;
}

message AddServiceOptionResponse {
  DetailingServiceOption option = 1;
}

// ========================================
// CatalogueService
// ========================================

service CatalogueService {
  // List all service categories
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/catalogue/categories"
    };
  }

  // List all active services
  rpc ListServices(ListCatalogueServicesRequest) returns (ListCatalogueServicesResponse) {
    option (google.api.http) = {
      get: "/api/v1/catalogue"
    };
  }

  // Get a service by slug
  rpc GetService(GetCatalogueServiceRequest) returns (GetCatalogueServiceResponse) {
    option (google.api.http) = {
      get: "/api/v1/catalogue/{slug}"
    };
  }

  // Create a new service (admin)
  rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/services"
      body: "*"
    };
  }

  // Update a service (admin)
  rpc UpdateService(UpdateServiceRequest) returns (UpdateServiceResponse) {
    option (google.api.http) = {
      put: "/api/v1/admin/services/{id}"
      body: "*"
    };
  }

  // Soft-delete a service (admin)
  rpc DeleteService(DeleteServiceRequest) returns (DeleteServiceResponse) {
    option (google.api.http) = {
      delete: "/api/v1/admin/services/{id}"
    };
  }

  // Add an option to a service (admin)
  rpc AddServiceOption(AddServiceOptionRequest) returns (AddServiceOptionResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/services/{service_id}/options"
      body: "*"
    };
  }
}
